# socket.io-client-cpp

./: CMakeLists.txt
src/: Config.cmake.in  ConfigVersion.cmake.in
test/: CMakeLists.txt
